added fantasy points

--- a/RB.ipynb
+++ b/RB.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>J. Taylor</td>\n",
+       "      <td>Jonathan Taylor</td>\n",
        "      <td>IND</td>\n",
        "      <td>22</td>\n",
        "      <td>RB</td>\n",
@@ -499,7 +499,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>N. Harris</td>\n",
+       "      <td>Najee Harris</td>\n",
        "      <td>PIT</td>\n",
        "      <td>23</td>\n",
        "      <td>RB</td>\n",
@@ -518,7 +518,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>J. Mixon</td>\n",
+       "      <td>Joe Mixon</td>\n",
        "      <td>CIN</td>\n",
        "      <td>25</td>\n",
        "      <td>RB</td>\n",
@@ -537,7 +537,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>A. Gibson</td>\n",
+       "      <td>Antonio Gibson</td>\n",
        "      <td>WAS</td>\n",
        "      <td>23</td>\n",
        "      <td>RB</td>\n",
@@ -556,7 +556,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>D. Cook</td>\n",
+       "      <td>Dalvin Cook</td>\n",
        "      <td>MIN</td>\n",
        "      <td>26</td>\n",
        "      <td>RB</td>\n",
@@ -594,7 +594,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td>T. Williams</td>\n",
+       "      <td>Ty'Son Williams</td>\n",
        "      <td>BAL</td>\n",
        "      <td>25</td>\n",
        "      <td>RB</td>\n",
@@ -613,7 +613,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td>E. Benjamin</td>\n",
+       "      <td>Eno Benjamin</td>\n",
        "      <td>ARI</td>\n",
        "      <td>22</td>\n",
        "      <td>RB</td>\n",
@@ -632,7 +632,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td>M. Brown</td>\n",
+       "      <td>Malcolm Brown</td>\n",
        "      <td>MIA</td>\n",
        "      <td>28</td>\n",
        "      <td>RB</td>\n",
@@ -651,7 +651,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td>C. Clement</td>\n",
+       "      <td>Corey Clement</td>\n",
        "      <td>DAL</td>\n",
        "      <td>27</td>\n",
        "      <td>RB</td>\n",
@@ -670,7 +670,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>D. Dallas</td>\n",
+       "      <td>DeeJay Dallas</td>\n",
        "      <td>SEA</td>\n",
        "      <td>23</td>\n",
        "      <td>RB</td>\n",
@@ -693,36 +693,36 @@
        "</div>"
       ],
       "text/plain": [
-       "          Player   Tm Age Pos   G  GS  Att   Yds  TD   1D  YBC YBC/Att  YAC  \\\n",
-       "0      J. Taylor  IND  22  RB  17  17  332  1811  18  107  870     2.6  941   \n",
-       "1      N. Harris  PIT  23  RB  17  17  307  1200   7   62  525     1.7  675   \n",
-       "2       J. Mixon  CIN  25  RB  16  16  292  1205  13   60  662     2.3  543   \n",
-       "3      A. Gibson  WAS  23  RB  16  14  258  1037   7   65  534     2.1  503   \n",
-       "4        D. Cook  MIN  26  RB  13  13  249  1159   6   57  678     2.7  481   \n",
-       "..           ...  ...  ..  ..  ..  ..  ...   ...  ..  ...  ...     ...  ...   \n",
-       "115  T. Williams  BAL  25  RB  13   3   35   185   1    7   98     2.8   87   \n",
-       "116  E. Benjamin  ARI  22  RB   9   0   34   118   1    4   53     1.6   65   \n",
-       "117     M. Brown  MIA  28  RB   7   3   33   125   1    6   70     2.1   55   \n",
-       "118   C. Clement  DAL  27  RB  17   0   33   140   0    7   65     2.0   75   \n",
-       "119    D. Dallas  SEA  23  RB  17   0   33   138   2   10   66     2.0   72   \n",
+       "              Player   Tm Age Pos   G  GS  Att   Yds  TD   1D  YBC YBC/Att  \\\n",
+       "0    Jonathan Taylor  IND  22  RB  17  17  332  1811  18  107  870     2.6   \n",
+       "1       Najee Harris  PIT  23  RB  17  17  307  1200   7   62  525     1.7   \n",
+       "2          Joe Mixon  CIN  25  RB  16  16  292  1205  13   60  662     2.3   \n",
+       "3     Antonio Gibson  WAS  23  RB  16  14  258  1037   7   65  534     2.1   \n",
+       "4        Dalvin Cook  MIN  26  RB  13  13  249  1159   6   57  678     2.7   \n",
+       "..               ...  ...  ..  ..  ..  ..  ...   ...  ..  ...  ...     ...   \n",
+       "115  Ty'Son Williams  BAL  25  RB  13   3   35   185   1    7   98     2.8   \n",
+       "116     Eno Benjamin  ARI  22  RB   9   0   34   118   1    4   53     1.6   \n",
+       "117    Malcolm Brown  MIA  28  RB   7   3   33   125   1    6   70     2.1   \n",
+       "118    Corey Clement  DAL  27  RB  17   0   33   140   0    7   65     2.0   \n",
+       "119    DeeJay Dallas  SEA  23  RB  17   0   33   138   2   10   66     2.0   \n",
        "\n",
-       "    YAC/Att BrkTkl Att/Br  \n",
-       "0       2.8     25   13.3  \n",
-       "1       2.2     30   10.2  \n",
-       "2       1.9     20   14.6  \n",
-       "3       1.9     19   13.6  \n",
-       "4       1.9     16   15.6  \n",
-       "..      ...    ...    ...  \n",
-       "115     2.5      1   35.0  \n",
-       "116     1.9      1   34.0  \n",
-       "117     1.7      3   11.0  \n",
-       "118     2.3      3   11.0  \n",
-       "119     2.2      3   11.0  \n",
+       "     YAC YAC/Att BrkTkl Att/Br  \n",
+       "0    941     2.8     25   13.3  \n",
+       "1    675     2.2     30   10.2  \n",
+       "2    543     1.9     20   14.6  \n",
+       "3    503     1.9     19   13.6  \n",
+       "4    481     1.9     16   15.6  \n",
+       "..   ...     ...    ...    ...  \n",
+       "115   87     2.5      1   35.0  \n",
+       "116   65     1.9      1   34.0  \n",
+       "117   55     1.7      3   11.0  \n",
+       "118   75     2.3      3   11.0  \n",
+       "119   72     2.2      3   11.0  \n",
        "\n",
        "[120 rows x 16 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,39 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        J. Taylor\n",
-      "1        N. Harris\n",
-      "2         J. Mixon\n",
-      "3        A. Gibson\n",
-      "4          D. Cook\n",
-      "          ...     \n",
-      "115    T. Williams\n",
-      "116    E. Benjamin\n",
-      "117       M. Brown\n",
-      "118     C. Clement\n",
-      "119      D. Dallas\n",
-      "Name: Name, Length: 120, dtype: object\n",
-      "4              N. Chubb\n",
-      "5              A. Jones\n",
-      "7             J. Taylor\n",
-      "13           S. Barkley\n",
-      "14            A. Ekeler\n",
-      "             ...       \n",
-      "284          K. Johnson\n",
-      "292          J. Hawkins\n",
-      "295           L. Perine\n",
-      "301    A. McFarland Jr.\n",
-      "307           D. Dallas\n",
-      "Name: Name, Length: 100, dtype: object\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -786,7 +756,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1115,7 @@
        "[106 rows x 35 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1330,18 +1300,6 @@
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>97</td>\n",
-       "      <td>David Andrews  Center | 2017-2020 (FA: 2021)</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3</td>\n",
-       "      <td>$9,000,000</td>\n",
-       "      <td>$3,000,000</td>\n",
-       "      <td>$1,600,000</td>\n",
-       "      <td>$1,600,000</td>\n",
-       "      <td>$1,600,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>97</td>\n",
        "      <td>Donte Moncrief  Wide Receiver | 2019-2020 (FA:...</td>\n",
        "      <td>25</td>\n",
        "      <td>2</td>\n",
@@ -1350,6 +1308,18 @@
        "      <td>$3,500,000</td>\n",
        "      <td>$3,500,000</td>\n",
        "      <td>$3,500,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>97</td>\n",
+       "      <td>Mike Pouncey  Center | 2019-2020 (FA: 2021)  O...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$9,000,000</td>\n",
+       "      <td>$9,000,000</td>\n",
+       "      <td>$2,500,000</td>\n",
+       "      <td>$5,000,000</td>\n",
+       "      <td>$5,000,000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1367,8 +1337,8 @@
        "95    96  Paxton Lynch  Quarterback | 2016-2020 (FA: 202...          22    4   \n",
        "96    97  Lee Smith  Tight End | 2018-2020 (FA: 2021)  O...          30    3   \n",
        "97    97  Sammy Watkins  Wide Receiver | 2020-2020 (FA: ...          26    1   \n",
-       "98    97       David Andrews  Center | 2017-2020 (FA: 2021)          24    3   \n",
-       "99    97  Donte Moncrief  Wide Receiver | 2019-2020 (FA:...          25    2   \n",
+       "98    97  Donte Moncrief  Wide Receiver | 2019-2020 (FA:...          25    2   \n",
+       "99    97  Mike Pouncey  Center | 2019-2020 (FA: 2021)  O...          30    1   \n",
        "\n",
        "           Value          AAV   Sign Bonus G'teed @ Sign Practical G'teed  \n",
        "0   $126,700,000  $18,100,000          NaN   $38,000,000      $54,000,000  \n",
@@ -1380,13 +1350,13 @@
        "95    $9,476,296   $2,369,074   $5,091,852    $7,884,074       $7,884,074  \n",
        "96    $9,000,000   $3,000,000          NaN    $3,000,000       $3,000,000  \n",
        "97    $9,000,000   $9,000,000   $1,000,000    $8,000,000       $8,000,000  \n",
-       "98    $9,000,000   $3,000,000   $1,600,000    $1,600,000       $1,600,000  \n",
-       "99    $9,000,000   $4,500,000   $3,500,000    $3,500,000       $3,500,000  \n",
+       "98    $9,000,000   $4,500,000   $3,500,000    $3,500,000       $3,500,000  \n",
+       "99    $9,000,000   $9,000,000   $2,500,000    $5,000,000       $5,000,000  \n",
        "\n",
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
