WR and TE data is clean

--- a/WR.ipynb
+++ b/WR.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,71 +142,13 @@
     "WR_receiving = football.readyToMerge(temp_receiving)\n",
     "WR1 = football.secondMerge(WR_rushing, WR_receiving)\n",
     "y = y.head(350)\n",
-    "WR = football.simpleMerge(WR1, y)"
+    "WR = football.simpleMerge(WR1, y)\n",
+    "WR_final = football.fix_columns_receiver(WR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WR_final = WR.drop(['Player_y', 'Tm_y', 'Pos_y', 'Att_y', 'Age_y', 'G_y', 'GS_y',\n",
-    "       'Tgt_y', 'Rec_y', 'Yds_y', 'TD_y', '1D_y', 'YBC_y', 'YAC_y', 'BrkTkl_y', 'Player_y'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WR = WR_final.rename(columns = {\"Player_x\": \"Player\", \n",
-    "                          \"Tm_x\": \"Tm\", \n",
-    "                          \"Pos_x\": \"Pos\", \n",
-    "                          \"Att_x\": \"Att\", \n",
-    "                          \"Age_x\": \"Age\", \n",
-    "                          \"G_x\": \"G\", \n",
-    "                          \"GS_x\": \"GS\",\n",
-    "                          \"Tgt_x\": \"Tgt\", \n",
-    "                          \"Rec_x\": \"Rec\", \n",
-    "                          \"Yds_x\": \"Yds\", \n",
-    "                          \"TD_x\": \"TD\", \n",
-    "                          \"1D_x\": \"1D\", \n",
-    "                          \"YBC_x\": \"YBC\", \n",
-    "                          \"YAC_x\": \"YAC\", \n",
-    "                          \"BrkTkl_x\": \"BrkTkl\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Player_2', 'Pos', 'Tm', 'GP', 'Att', 'Rushing_Yds', 'Rushing_Td',\n",
-       "       'Rushing_1st', 'Tgt', 'Rec', 'Receiving_Yds', 'Receiving_Td',\n",
-       "       'Receiving_1st', 'Return_Yds', 'Return_Td', '2PT', 'Total', 'Lost',\n",
-       "       'Name', 'Age', 'G', 'GS', 'Yds', 'TD', '1D', 'YBC', 'YBC/Att', 'YAC',\n",
-       "       'YAC/Att', 'BrkTkl', 'Att/Br', 'Player_2', 'Tm', 'Pos', 'YBC/R',\n",
-       "       'YAC/R', 'ADOT', 'Rec/Br', 'Drop', 'Drop%', 'Int', 'Rat', 'points'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WR.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -230,16 +172,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Player_x</th>\n",
-       "      <th>Pos_x</th>\n",
-       "      <th>Tm_x</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Tm</th>\n",
        "      <th>GP</th>\n",
-       "      <th>Att_x</th>\n",
+       "      <th>Att</th>\n",
        "      <th>Rushing_Yds</th>\n",
        "      <th>Rushing_Td</th>\n",
        "      <th>Rushing_1st</th>\n",
-       "      <th>Tgt_x</th>\n",
-       "      <th>Rec_x</th>\n",
+       "      <th>Tgt</th>\n",
+       "      <th>Rec</th>\n",
        "      <th>...</th>\n",
        "      <th>Pos</th>\n",
        "      <th>YBC/R</th>\n",
@@ -524,42 +466,42 @@
        "</div>"
       ],
       "text/plain": [
-       "         Player_x Pos_x Tm_x  GP Att_x Rushing_Yds Rushing_Td Rushing_1st  \\\n",
-       "0         T. Hill    WR   KC  15    13         123          2           5   \n",
-       "1    J. Jefferson    WR  Min  16     1           2          0           0   \n",
-       "2      D. Metcalf    WR  Sea  16     0           0          0           0   \n",
-       "3        D. Adams    WR   GB  14     0           0          0           0   \n",
-       "4       C. Ridley    WR  Atl  15     5           1          0           1   \n",
-       "..            ...   ...  ...  ..   ...         ...        ...         ...   \n",
-       "135   P. Williams    WR  Mia   8     0           0          0           0   \n",
-       "136     C. Conley    WR  Hou  15     0           0          0           0   \n",
-       "137     T. Atwell    WR  LAR   -     -           -          -           -   \n",
-       "138   D. Eskridge    WR  Sea   -     -           -          -           -   \n",
-       "139    T. Fulgham    WR  Phi  13     0           0          0           0   \n",
+       "           Player Pos   Tm  GP Att Rushing_Yds Rushing_Td Rushing_1st  Tgt  \\\n",
+       "0         T. Hill  WR   KC  15  13         123          2           5  135   \n",
+       "1    J. Jefferson  WR  Min  16   1           2          0           0  125   \n",
+       "2      D. Metcalf  WR  Sea  16   0           0          0           0  129   \n",
+       "3        D. Adams  WR   GB  14   0           0          0           0  149   \n",
+       "4       C. Ridley  WR  Atl  15   5           1          0           1  143   \n",
+       "..            ...  ..  ...  ..  ..         ...        ...         ...  ...   \n",
+       "135   P. Williams  WR  Mia   8   0           0          0           0   35   \n",
+       "136     C. Conley  WR  Hou  15   0           0          0           0   63   \n",
+       "137     T. Atwell  WR  LAR   -   -           -          -           -    -   \n",
+       "138   D. Eskridge  WR  Sea   -   -           -          -           -    -   \n",
+       "139    T. Fulgham  WR  Phi  13   0           0          0           0   67   \n",
        "\n",
-       "    Tgt_x Rec_x  ... Pos YBC/R YAC/R  ADOT Rec/Br Drop Drop% Int    Rat points  \n",
-       "0     135    87  ...  WR   7.2   4.0  10.4   11.1    7   4.4   3  103.7  185.5  \n",
-       "1     125    88  ...  WR  10.5   4.5  12.4   21.6    7   4.2   2  111.3  222.4  \n",
-       "2     129    83  ...  WR   8.5   4.4  12.7    9.4    4   3.1   2  106.3  169.3  \n",
-       "3     149   115  ...  WR   7.8   4.8   9.6   24.6    3   1.8   3  115.3  221.3  \n",
-       "4     143    90  ...  WR   6.1   2.9  10.0   31.0    3   5.8   1   79.1   40.1  \n",
-       "..    ...   ...  ...  ..   ...   ...   ...    ...  ...   ...  ..    ...    ...  \n",
-       "135    35    18  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "136    63    40  ...  WR   9.0   5.7   9.1    7.3    2   5.4   1   94.8   42.6  \n",
-       "137     -     -  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "138     -     -  ...  WR   3.2   3.2  12.6    5.0    0   0.0   0   73.7    0.0  \n",
-       "139    67    38  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
+       "     Rec  ... Pos YBC/R YAC/R  ADOT Rec/Br Drop Drop% Int    Rat points  \n",
+       "0     87  ...  WR   7.2   4.0  10.4   11.1    7   4.4   3  103.7  185.5  \n",
+       "1     88  ...  WR  10.5   4.5  12.4   21.6    7   4.2   2  111.3  222.4  \n",
+       "2     83  ...  WR   8.5   4.4  12.7    9.4    4   3.1   2  106.3  169.3  \n",
+       "3    115  ...  WR   7.8   4.8   9.6   24.6    3   1.8   3  115.3  221.3  \n",
+       "4     90  ...  WR   6.1   2.9  10.0   31.0    3   5.8   1   79.1   40.1  \n",
+       "..   ...  ...  ..   ...   ...   ...    ...  ...   ...  ..    ...    ...  \n",
+       "135   18  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
+       "136   40  ...  WR   9.0   5.7   9.1    7.3    2   5.4   1   94.8   42.6  \n",
+       "137    -  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
+       "138    -  ...  WR   3.2   3.2  12.6    5.0    0   0.0   0   73.7    0.0  \n",
+       "139   38  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
        "\n",
        "[140 rows x 43 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WR"
+    "WR_final"
    ]
   },
   {
