--- a/RB.ipynb
+++ b/RB.ipynb
@@ -762,8 +762,7 @@
     }
    ],
    "source": [
-    "RB1 = football.addAdvanced(RB_data, rushing_advanced)\n",
-    "RB1.columns"
+    "RB1 = football.addAdvanced(RB_data, rushing_advanced)"
    ]
   },
   {
