--- a/QB.ipynb
+++ b/QB.ipynb
@@ -970,6 +970,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GP              -1.785378\n",
+       "Comp            77.236146\n",
+       "Inc           -149.409227\n",
+       "Passing_Yds    121.132238\n",
+       "Passing_Td       3.891795\n",
+       "Int             -2.909247\n",
+       "Pic6            -0.230831\n",
+       "Sks             11.794794\n",
+       "Passing_1st     -72.51968\n",
+       "Att             85.663571\n",
+       "Rushing_Yds    -57.554045\n",
+       "Rushing_Td      -0.579332\n",
+       "Rushing_1st      7.304228\n",
+       "Total            3.928148\n",
+       "Lost             0.213684\n",
+       "Rk              -2.072817\n",
+       "Age            -33.024426\n",
+       "G                0.801538\n",
+       "GS               0.801538\n",
+       "Cmp              91.75569\n",
+       "Yds             52.998593\n",
+       "IAY             47.529191\n",
+       "IAY/PA          -0.392184\n",
+       "CAY             34.451019\n",
+       "CAY/Cmp         -0.048375\n",
+       "CAY/PA          -0.100006\n",
+       "YAC             -1.697235\n",
+       "YAC/Cmp         -0.055833\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = model.coef_\n",
+    "# values\n",
+    "inputs = QB_final.head(1)\n",
+    "inputs = inputs.loc[:, ~inputs.columns.isin(['Player', 'Name', 'Pos', 'Tm', 'points'])]\n",
+    "inputs.columns\n",
+    "combined = (inputs * values)\n",
+    "combined.sum(axis = 1)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
