--- a/RB.ipynb
+++ b/RB.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +143,13 @@
     "RB_receiving = football.readyToMerge(temp_receiving)\n",
     "RB1 = football.secondMerge(RB_rushing, RB_receiving)\n",
     "RB = football.simpleMerge(RB1, y)\n",
-    "RB_final = football.fix_columns(RB)"
+    "RB_final = football.fix_columns(RB)\n",
+    "RB_final = RB_final.loc[:,~RB_final.columns.duplicated()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
        "      <th>Tgt</th>\n",
        "      <th>Rec</th>\n",
        "      <th>...</th>\n",
-       "      <th>Pos</th>\n",
+       "      <th>Att/Br</th>\n",
        "      <th>YBC/R</th>\n",
        "      <th>YAC/R</th>\n",
        "      <th>ADOT</th>\n",
@@ -209,7 +210,7 @@
        "      <td>18</td>\n",
        "      <td>16</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>9.9</td>\n",
        "      <td>0.1</td>\n",
        "      <td>8.6</td>\n",
        "      <td>1.0</td>\n",
@@ -233,7 +234,7 @@
        "      <td>63</td>\n",
        "      <td>47</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>14.3</td>\n",
        "      <td>-0.4</td>\n",
        "      <td>7.9</td>\n",
        "      <td>0.9</td>\n",
@@ -257,7 +258,7 @@
        "      <td>39</td>\n",
        "      <td>36</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>13.3</td>\n",
        "      <td>-1.2</td>\n",
        "      <td>10.2</td>\n",
        "      <td>-0.9</td>\n",
@@ -281,7 +282,7 @@
        "      <td>39</td>\n",
        "      <td>36</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>13.3</td>\n",
        "      <td>-0.5</td>\n",
        "      <td>2.5</td>\n",
        "      <td>-0.5</td>\n",
@@ -305,7 +306,7 @@
        "      <td>9</td>\n",
        "      <td>6</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>40.5</td>\n",
        "      <td>-0.9</td>\n",
        "      <td>7.3</td>\n",
        "      <td>0.5</td>\n",
@@ -449,7 +450,7 @@
        "      <td>20</td>\n",
        "      <td>17</td>\n",
        "      <td>...</td>\n",
-       "      <td>RB</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>1.1</td>\n",
        "      <td>5.2</td>\n",
        "      <td>1.7</td>\n",
@@ -462,7 +463,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>187 rows × 43 columns</p>\n",
+       "<p>187 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -479,23 +480,23 @@
        "185  A. McFarland Jr.  RB  Pit  11   33         113          0           4   \n",
        "186         D. Dallas  RB  Sea  12   34         108          2           9   \n",
        "\n",
-       "    Tgt Rec  ... Pos YBC/R YAC/R  ADOT Rec/Br Drop Drop% Int    Rat points  \n",
-       "0    18  16  ...  RB   0.1   8.6   1.0    5.0    0   0.0   0  109.0  195.3  \n",
-       "1    63  47  ...  RB  -0.4   7.9   0.9   13.0    3   4.6   0  122.5  177.0  \n",
-       "2    39  36  ...  RB  -1.2  10.2  -0.9   20.0    5   9.8   0  109.2  333.1  \n",
-       "3    39  36  ...  RB  -0.5   2.5  -0.5           0   0.0   0   79.2  333.1  \n",
-       "4     9   6  ...  RB  -0.9   7.3   0.5   10.3    6  10.5   0   92.9  107.6  \n",
-       "..   ..  ..  ...  ..   ...   ...   ...    ...  ...   ...  ..    ...    ...  \n",
-       "182  26  19  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "183   -   -  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "184  15  11  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "185   9   6  ...   0     0     0     0      0    0     0   0      0    0.0  \n",
-       "186  20  17  ...  RB   1.1   5.2   1.7   21.0    1   4.3   0   90.8   39.1  \n",
+       "    Tgt Rec  ... Att/Br YBC/R YAC/R  ADOT Rec/Br Drop Drop% Int    Rat points  \n",
+       "0    18  16  ...    9.9   0.1   8.6   1.0    5.0    0   0.0   0  109.0  195.3  \n",
+       "1    63  47  ...   14.3  -0.4   7.9   0.9   13.0    3   4.6   0  122.5  177.0  \n",
+       "2    39  36  ...   13.3  -1.2  10.2  -0.9   20.0    5   9.8   0  109.2  333.1  \n",
+       "3    39  36  ...   13.3  -0.5   2.5  -0.5           0   0.0   0   79.2  333.1  \n",
+       "4     9   6  ...   40.5  -0.9   7.3   0.5   10.3    6  10.5   0   92.9  107.6  \n",
+       "..   ..  ..  ...    ...   ...   ...   ...    ...  ...   ...  ..    ...    ...  \n",
+       "182  26  19  ...      0     0     0     0      0    0     0   0      0    0.0  \n",
+       "183   -   -  ...      0     0     0     0      0    0     0   0      0    0.0  \n",
+       "184  15  11  ...      0     0     0     0      0    0     0   0      0    0.0  \n",
+       "185   9   6  ...      0     0     0     0      0    0     0   0      0    0.0  \n",
+       "186  20  17  ...   11.0   1.1   5.2   1.7   21.0    1   4.3   0   90.8   39.1  \n",
        "\n",
-       "[187 rows x 43 columns]"
+       "[187 rows x 40 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
