looking at results

--- a/WR.ipynb
+++ b/WR.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +143,12 @@
     "WR1 = football.secondMerge(WR_rushing, WR_receiving)\n",
     "y = y.head(350)\n",
     "WR = football.simpleMerge(WR1, y)\n",
-    "WR_final = football.fix_columns_receiver(WR)"
+    "WR_final = football.fix_columns(WR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "[140 rows x 43 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
