testing multiple models

--- a/RB.ipynb
+++ b/RB.ipynb
@@ -542,14 +542,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['ATT', 'Rushing_Yds', 'Rushing_Td', 'FPTS/G', 'YBCON'], dtype='object')\n"
+      "Index(['ATT', 'Rushing_Yds', 'Rushing_Td', 'FPTS/G', 'YBCON'], dtype='object')\n",
+      "<class 'sklearn.linear_model._base.LinearRegression'>\n"
      ]
     },
     {
@@ -558,7 +559,7 @@
        "0.010343054681317854"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
